--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,16 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BudgetBuddyTravel"
         tools:targetApi="31">
+
+        <!-- 🔄 AuthActivity devient l'activité principale -->
         <activity
-            android:name=".MainActivity"
+            android:name=".AuthActivity"
             android:exported="true"
             android:theme="@style/Theme.BudgetBuddyTravel">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- MainActivity reste, mais ne démarre plus au lancement -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.BudgetBuddyTravel"/>
     </application>
 
 </manifest>
