feat: adding front part

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.BudgetBuddyTravel"/>
+        <activity android:name=".utils.StatistiquesActivity" />
+
+
     </application>
 
 </manifest>
